[project]
name = "test_Stroke_R01"
version = "0.1.2"
authors = [
    { name = "Mitchell Tillman", email = "mtillman14@gmail.com" },
]
readme = "README.md"
dependencies = []

[tool.ross]
language = "matlab"
dependencies = [
    "load_gaitrite @ git+https://github.com/mtillman14/load-gaitrite@v0.1.3",
    "load_xsens @ git+https://github.com/mtillman14/load-xsens@v0.1.4",
    "load_delsys @ git+https://github.com/mtillman14/load-delsys@v0.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
